--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <img src="white-ice-berg (1).jpg" alt="Background Image" />
       </div>
       <div class="form-container">
-        <form>
+        <form action="https://getform.io/f/raeqxwda" method="post">
           <input type="email" placeholder="Enter your email" required />
           <input type="submit" value="Subscribe" />
         </form>
