--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
       </div>
       <div class="form-container">
         <form action="https://getform.io/f/raeqxwda" method="post">
-          <input type="email" placeholder="Enter your email" required />
+          <input
+            type="email"
+            placeholder="Enter your email"
+            name="email"
+            required
+          />
           <input type="submit" value="Subscribe" />
         </form>
       </div>
