--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <body>
     <div class="container">
       <div class="heading">
-        <h1>Stay Tuned.</h1>
+        <h1>Stay Tuned...........</h1>
         <h4>Something big is beneath the surface</h4>
       </div>
       <div class="form-container"></div>
