--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
   <body>
     <div class="container">
       <div class="content">
-        <h1>Stay Tuned.</h1>
+        <h1>
+          Stay
+          <br>
+          Tuned.
+        </h1>
         <p>Something big is beneath the surface</p>
-        <div class="subscribe">
-          <form action="https://getform.io/f/raeqxwda" method="post">
-            <input
-              type="email"
-              placeholder="Enter your email"
-              name="email"
-              required
-            />
-            <input type="submit" value="Subscribe" />
-          </form>
-        </div>
+      </div>
+      <div class="subscribe-section">
+        <form
+          action="https://getform.io/f/raeqxwda"
+          method="post"
+          class="subscribe"
+        >
+          <input
+            type="email"
+            placeholder="Enter your email"
+            name="email"
+            required
+          />
+          <input type="submit" value="Subscribe" />
+        </form>
       </div>
       <div class="footer">
         <p>Get notified when we launch</p>
