--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="container">
       <div class="content">
         <h1>
-          Stay
-          <br>
+          Stay <br />
           Tuned.
         </h1>
         <p>Something big is beneath the surface</p>
       </div>
       <div class="subscribe-section">
+        <p>Get notified when we launch</p>
         <form
           action="https://getform.io/f/raeqxwda"
           method="post"
@@ -36,7 +36,6 @@
         </form>
       </div>
       <div class="footer">
-        <p>Get notified when we launch</p>
         <div class="social-icons">
           <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
