--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
         </div>
         <p>© Copyrights Greelogix | All Rights Reserved</p>
       </div>
