--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
         </div>
-        <p>© Copyrights Greelogix | All Rights Reserved</p>
+        <p>© Copyrights IceBeark Engineering | All Rights Reserved</p>
       </div>
     </div>
   </body>
