--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           Stay <br />
           Tuned.
         </h1>
-        <p>Something big is beneath the surface</p>
+        <p>Something big <hr> is beneath the <br> surface</p>
       </div>
       <div class="subscribe-section">
         <p>Get notified when we launch</p>
@@ -42,7 +42,7 @@
           <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
         </div>
-        <p>© Copyrights IceBeark Engineering | All Rights Reserved</p>
+        <p>© Copyrights Icebearg Engineering | All Rights Reserved</p>
       </div>
     </div>
   </body>
