Update formatting and content in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
           Stay <br />
           Tuned.
         </h1>
-        <p>Something big <hr> is beneath the <br> surface</p>
+        <p class="yel">
+          Something big <br />
+          is beneath the <br />
+          surface
+        </p>
       </div>
       <div class="subscribe-section">
-        <p>Get notified when we launch</p>
+        <p class="get">Get notified when we launch</p>
         <form
           action="https://getform.io/f/raeqxwda"
           method="post"
@@ -42,7 +46,7 @@
           <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
         </div>
-        <p>© Copyrights Icebearg Engineering | All Rights Reserved</p>
+        <p>© Copyrights Iceberg Engineering | All Rights Reserved</p>
       </div>
     </div>
   </body>
